<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BasicsActivity">

    <TextView
        android:id="@+id/labelName"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/name_of_the_network"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/idName"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/write_here"
        android:inputType="text" />

    <TextView
        android:id="@+id/labelType"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/type"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="match_parent"
        android:layout_height="58dp" />


    <Button
        android:id="@+id/buttonBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_mainmenu"
        android:enabled="false"/>

</LinearLayout>