<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SummaryActivity">

    <TextView
        android:id="@+id/tvBasicsSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basics_info"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/tvEncryptionSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encryption_info"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/buttonBackMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_main_menu" />
</LinearLayout>